apps/kopia/kopia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopia
spec:
  type: ClusterIP
  selector:
    app: kopia
  ports:
    - name: kopia
      port: 51515
      targetPort: 51515
